# ASL-2020

./: .gitignore  CMakeLists.txt  README.md  base.cpp  base.h  common.h  compile.sh  compile_run.sh  experiments.py  main.c  main.cpp  measure.h  measure_runtime  plot.py  run.sh  test_base  test_base.cpp  utils.cpp
base/: base.cpp  base_validate.cpp  validate.cpp
common/: clock.h  common.h  generate.cpp  inline.h  main.cpp  perf.cpp  utils.cpp
lib/: clock.h  common.h  main.cpp  modes.cpp  modes.h  perf.cpp  runtime.cpp  utils.cpp
opts/: avx_final.cpp  avx_final_inverted_denoms.cpp  avx_update_no_tp.cpp  avx_update_tp.cpp  avx_update_tp_spatial_loc.cpp  avx_update_tp_spatial_loc_unroll8.cpp  avx_update_tp_spatial_loc_vec.cpp  base.cpp  no_opt.cpp  opt1.cpp  opt1_unrolled.cpp  opt1bck.cpp  opt2.cpp  opt2_no_unroll.cpp  opt_avx_mem.cpp  opt_avx_tp.cpp  opt_avx_tp_mem.cpp  opt_stdc.cpp  opt_stdc_tp_mem.cpp
output_data/: no_opt%-O3.csv  no_opt%O0.csv
plots/: concept.txt  constants.py  csv_cols.py  plot.py  template.py  units.py
plots/data/: dummie_data.csv  dummie_df.csv
python_lib/: concept.txt  constants.py  cpu_info.py  csv_cols.py  dummie_csv_generator.py
results/compare/no_opt@g++_O3_march=native@2020-05-22_22-32-07/: report.csv
results/compare/opt_avx_tp@g++_O3_march=native@2020-05-23_07-59-50/: report.csv
results/compare/opt_stdc@g++_O3_march=native@2020-05-23_02-05-15/: report.csv
results/compare_mem/opt_avx_mem@g++_O3_march=native@2020-05-23_09-38-23/: report.csv
results/compare_mem/opt_avx_tp_mem@g++_O3_march=native@2020-05-23_09-02-29/: report.csv
results/compare_mem/opt_stdc_mem@g++_O3_march=native@2020-05-23_04-13-33/: report.csv
results/compare_mem/opt_stdc_tp_mem@g++_O3_march=native@2020-05-23_07-00-40/: report.csv
results/no_opt%g++_O1/: report.csv
results/no_opt%g++_O3/: report.csv
results/no_opt%g++_Ofast/: report.csv
results/no_opt@g++_O3@20hrs/: report.csv
results/no_opt@g++_flags/no_opt@g++_O1@2020-05-03_03-13-06/: report.csv
results/no_opt@g++_flags/no_opt@g++_O2@2020-05-03_01-49-23/: report.csv
results/no_opt@g++_flags/no_opt@g++_O3@2020-05-03_00-30-51/: report.csv
results/no_opt@g++_flags/no_opt@g++_O3_march=skylake@2020-05-03_22-37-25/: report.csv
results/no_opt@icc_flags/no_opt@icc_O1@2020-05-04_04-11-03/: report.csv
results/no_opt@icc_flags/no_opt@icc_O2@2020-05-04_02-52-44/: report.csv
results/no_opt@icc_flags/no_opt@icc_O3@2020-05-04_00-00-20/: report.csv
results/no_opt@icc_flags/no_opt@icc_O3_axCORE-AVX2@2020-05-04_01-25-56/: report.csv
setup_scripts/: isolate_core.sh  redirect_irq.sh  turbo_boost.sh
test/: test.cpp
